--- a/internal/assets/manifests/istio-control/istio-discovery/templates/deployment.yaml
+++ b/internal/assets/manifests/istio-control/istio-discovery/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
   namespace: {{ .Release.Namespace }}
+{{- include "toYamlIf" (dict "value" .Values.pilot.deploymentAnnotations "key" "annotations" "indent" 2) | indent 2 }}
   labels:
     app: istiod
     istio.io/rev: {{ include "namespaced-revision" . }}
@@ -17,11 +18,10 @@ spec:
   replicas: {{ .Values.pilot.replicaCount }}
 {{- end }}
 {{- end }}
+{{- if .Values.pilot.deploymentStrategy }}
   strategy:
-    rollingUpdate:
-      maxSurge: {{ .Values.pilot.rollingMaxSurge }}
-      maxUnavailable: {{ .Values.pilot.rollingMaxUnavailable }}
-    type: RollingUpdate
+{{ .Values.pilot.deploymentStrategy | toYaml | indent 4 }}
+{{- end }}
   selector:
     matchLabels:
       app: istiod
@@ -33,6 +33,9 @@ spec:
         istio.io/rev: {{ include "namespaced-revision" . }}
         sidecar.istio.io/inject: "false"
         istio: istiod
+        {{- if .Values.pilot.podLabels }}
+{{ toYaml .Values.pilot.podLabels | indent 8 }}
+        {{- end }}
       annotations:
         {{- if .Values.meshConfig.enablePrometheusMerge }}
         prometheus.io/port: "15014"
@@ -48,7 +51,7 @@ spec:
       priorityClassName: "{{ .Values.global.priorityClassName }}"
 {{- end }}
       securityContext:
-        fsGroup: 1337
+        {{- toYaml .Values.pilot.podSecurityContext | nindent 8 }}
       containers:
         - name: discovery
 {{- if contains "/" .Values.pilot.image }}
@@ -162,6 +165,7 @@ spec:
           - name: extracacerts
             mountPath: /cacerts
           {{- end }}
+{{ include "toYamlIf" (dict "value" .Values.pilot.volumeMounts) | indent 10 }}
       volumes:
       # Technically not needed on this pod - but it helps debugging/testing SDS
       # Should be removed after everything works.
@@ -191,6 +195,7 @@ spec:
         configMap:
           name: {{ include "name-with-revision" ( dict "name" "pilot-jwks-extra-cacerts" "context" $) }}
   {{- end }}
+{{ include "toYamlIf" (dict "value" .Values.pilot.volumes) | indent 6 }}
       {{- with .Values.pilot.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -202,5 +207,5 @@ spec:
       {{- with .Values.pilot.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
-  {{- end }}
+      {{- end }}
 ---
