--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,12 +9,14 @@ patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_istiocontrolplanes.yaml
+#- patches/webhook_in_istiomeshes.yaml
 #- patches/webhook_in_meshgateways.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_istiocontrolplanes.yaml
+#- patches/cainjection_in_istiomeshes.yaml
 #- patches/cainjection_in_meshgateways.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
