--- a/deploy/charts/istio-operator/Chart.yaml
+++ b/deploy/charts/istio-operator/Chart.yaml
@@ -4,5 +4,5 @@ version: 0.0.84
 description: istio-operator manages Istio deployments on Kubernetes
 sources:
   - https://github.com/banzaicloud/istio-operator
-appVersion: 0.9.10
+appVersion: v0.9.11
 icon: https://istio.io/img/istio-logo-social-blue-background.svg
