--- a/internal/components/discovery/testdata/icp-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-test-cr.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cp-v111x
   namespace: istio-system
 spec:
+  meshID: mesh1
   version: "1.11.0"
   logging:
     level: "default:warning"
