Omit using 'v2' suffix where possible

--- a/deploy/charts/istio-operator/Chart.yaml
+++ b/deploy/charts/istio-operator/Chart.yaml
@@ -1,7 +1,7 @@
 # v2 apiVersion is used to indicate that only Helm3 is supported: https://helm.sh/docs/topics/charts/#the-apiversion-field
 apiVersion: v2
-name: istio-operator-v2
-description: istio-operator-v2 manages Istio deployments on Kubernetes
+name: istio-operator
+description: istio-operator manages Istio deployments on Kubernetes
 type: application
 keywords:
   - istio
@@ -13,5 +13,5 @@ icon: https://istio.io/latest/img/istio-whitelogo-bluebackground-framed.svg
 # Based on support status of Istio releases: https://istio.io/latest/docs/releases/supported-releases/#support-status-of-istio-releases
 kubeVersion: ">= 1.19.0 < 1.23.0"
 
-version: 0.0.1
-appVersion: "v0.0.1"
+version: 2.0.0
+appVersion: "v2.11.0"
