--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: istio-system
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: istio-operator-v2-
+namePrefix: istio-operator-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
