--- a/deploy/charts/istio-operator/templates/authproxy-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/authproxy-rbac.yaml
@@ -2,19 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "istio-operator-v2.authProxyName" . }}
+  name: {{ include "istio-operator.authProxyName" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "istio-operator-v2.authProxyLabels" . | nindent 4 }}
+    {{- include "istio-operator.authProxyLabels" . | nindent 4 }}
 imagePullSecrets:
 {{ toYaml .Values.imagePullSecrets | indent 2 }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "istio-operator-v2.authProxyName" . }}
+  name: {{ include "istio-operator.authProxyName" . }}
   labels:
-    {{- include "istio-operator-v2.authProxyLabels" . | nindent 4 }}
+    {{- include "istio-operator.authProxyLabels" . | nindent 4 }}
 rules:
 - apiGroups: ["authentication.k8s.io"]
   resources:
@@ -28,24 +28,24 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "istio-operator-v2.authProxyName" . }}
+  name: {{ include "istio-operator.authProxyName" . }}
   labels:
-    {{- include "istio-operator-v2.authProxyLabels" . | nindent 4 }}
+    {{- include "istio-operator.authProxyLabels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "istio-operator-v2.authProxyName" . }}
+  name: {{ include "istio-operator.authProxyName" . }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "istio-operator-v2.authProxyName" . }}
+  name: {{ include "istio-operator.authProxyName" . }}
   namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "istio-operator-v2.authProxyName" . }}-metrics-reader
+  name: {{ include "istio-operator.authProxyName" . }}-metrics-reader
   labels:
-    {{- include "istio-operator-v2.authProxyLabels" . | nindent 4 }}
+    {{- include "istio-operator.authProxyLabels" . | nindent 4 }}
 rules:
   - nonResourceURLs: ["/metrics"]
     verbs: ["get"]
