--- a/deploy/charts/istio-operator/templates/authproxy-service.yaml
+++ b/deploy/charts/istio-operator/templates/authproxy-service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "istio-operator-v2.authProxyName" . }}
+  name: {{ include "istio-operator.authProxyName" . }}
   namespace: {{ .Release.Namespace }}
   annotations:
     prometheus.io/port: "8443"
     prometheus.io/scheme: https
     prometheus.io/scrape: "true"
   labels:
-    {{- include "istio-operator-v2.authProxyLabels" . | nindent 4 }}
+    {{- include "istio-operator.authProxyLabels" . | nindent 4 }}
 spec:
   ports:
   - name: https
@@ -17,5 +17,5 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
-    {{- include "istio-operator-v2.operatorSelectorLabels" . | nindent 4 }}
+    {{- include "istio-operator.operatorSelectorLabels" . | nindent 4 }}
 {{- end }}
