--- a/deploy/charts/istio-operator/templates/namespace.yaml
+++ b/deploy/charts/istio-operator/templates/namespace.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-   {{- include "istio-operator-v2.labels" . | nindent 4 }}
+   {{- include "istio-operator.labels" . | nindent 4 }}
   name: {{ .Release.Namespace }}
 {{- end }}
