--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -2,19 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "istio-operator-v2.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "istio-operator-v2.operatorLabels" . | nindent 4 }}
+    {{- include "istio-operator.operatorLabels" . | nindent 4 }}
 imagePullSecrets:
 {{ toYaml .Values.imagePullSecrets | indent 2 }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "istio-operator-v2.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}
   labels:
-    {{- include "istio-operator-v2.operatorLabels" . | nindent 4 }}
+    {{- include "istio-operator.operatorLabels" . | nindent 4 }}
 rules:
 - apiGroups:
   - ""
@@ -310,15 +310,15 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "istio-operator-v2.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}
   labels:
-    {{- include "istio-operator-v2.operatorLabels" . | nindent 4 }}
+    {{- include "istio-operator.operatorLabels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "istio-operator-v2.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "istio-operator-v2.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
